# nmblas

./: README.md  bug.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_func.html  group___l_e_v_e_l1.html  group___l_e_v_e_l2.html  index.hhc  index.hhk  index.hhp  index.html  modules.html  nmblas.chm  nmblas_8h.html  nmblas_8h_source.html  pages.html
app/examples/level1/Step04/: main.c
app/examples/level1/Step04/make-mc12101/: Makefile
app/examples/level1/Step04/make-verilog/: Makefile  emu.cfg  sim_utility.s
app/templates/sometest/: Makefile
app/templates/sometest/make_mc12101_nmc0/: Makefile
app/templates/sometest/make_vs8/: Makefile
include/: led.mlb  nmblas.h
make/doxy/: Doxyfile  Makefile
make/nmblas-nmc4f/: Makefile
make/nmblas-nmc4f-gcc/: Makefile
make/nmblas-x86-x64/: CMakeLists.txt  Makefile
src/level1/nmcore/: fpu_dasum.s  fpu_dnrm2.s  fpu_drotm.s  fpu_idamax.s  fpu_isamax.s  fpu_scnrm2.s  fpu_sdot.s  fpu_snrm2.s  fpu_srot.s  fpu_srotm.s  fpu_sscal.s
src/level2/nmcore/: fpu_sgemv.s  fpu_sgemv_trans.s
